# fcm-client

./: README.md  fcm-client.cabal  stack.yaml
.github/workflows/: ci.yml
cli/: CliArgs.hs  Main.hs
src/: FCMClient.hs
src/FCMClient/: Types.hs
src/FCMClient/JSON/: Types.hs
test/: Spec.hs
